--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend support for the library manager",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node server"
   },
   "author": "Hemanth kumar Sangam",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
