--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server"
+    "start": "node server"
   },
   "author": "Hemanth kumar Sangam",
   "license": "ISC",
@@ -13,7 +13,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
